Version 0.9 (not released)
--------------------------

 * Use HTTP socket more efficiently to avoid the Nagle algorithm, greatly
   improving performace. Note: add the {nodelay, true} option to the CouchDB
   server's httpd/socket_options config.
 * Add support for show and list functions.
 * Add support for calling update handlers.
 * Add support for purging documents.
 * Add view cleanup API.
 * Enhance Server.stats() to optionally retrieve a single set of statistics.
 * Implement Session timeouts.
 * Add `error` property to Row objects.
 * Add default=None arg to mapping.Document.get() to make it a little more
   dict-like.
 * Enhance Database.info() so it can also be used to get info for a design
   doc.
 * Add view definition options, e.g. collation.
 * Protect ResourceBody from being iterated/closed multiple times.
 * JSON encoding exception are no longer masked, giving clearer errors.
 * Fix Row.value and Row.__repr__ to never raise exceptions.
 * Fix Python view server's reduce to handle empty map results list.
 * Don't require setuptools/distribute to install the core package. (Still
   needed to install the console scripts.)


Version 0.8 (Aug 13, 2010)
--------------------------

 * The couchdb-replicate script has changed from being a poor man's version of
   continuous replication (predating it) to being a simple script to help
   kick off replication jobs across databases and servers.
 * Reinclude all http exception types in the 'couchdb' package's scope.
 * Replaced epydoc API docs by more extensive Sphinx-based documentation.
 * Request retries schedule and frequency are now customizable.
 * Allow more kinds of request errors to trigger a retry.
 * Improve wrapping of view results.
 * Added a `uuids()` method to the `client.Server` class (issue 122).
 * Tested with CouchDB 0.10 - 1.0 (and Python 2.4 - 2.7).


Version 0.7.0 (Apr 15, 2010)
----------------------------

 * Breaking change: the dependency on `httplib2` has been replaced by